Use removeLast instead